--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+}
+
+#sidebar {
+  height: 100%;
+  min-height: 100vh;
+  min-width: 180px;
+}
+
+.card {
+  height: 100%;
+}
+.card-img-top {
+  max-height: 10rem;
+  object-fit: cover;
+  height: 100%;
+}
+.card-body {
+  display: flex;
+  align-items: center;
+}
